--- a/index.html
+++ b/index.html
@@ -119,10 +119,6 @@
     "react": "https://aistudiocdn.com/react@^19.2.0",
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
     "react/": "https://aistudiocdn.com/react@^19.2.0/",
-    "@sanity/client": "https://aistudiocdn.com/@sanity/client@^6.21.1",
-    "@sanity/image-url": "https://aistudiocdn.com/@sanity/image-url@^1.0.2",
-    "@sanity/image-url/": "https://aistudiocdn.com/@sanity/image-url@^1.0.2/",
-    "sanity": "https://aistudiocdn.com/sanity@^4.10.2",
     "phosphor-react": "https://aistudiocdn.com/phosphor-react@^1.4.1",
     "phosphor-react/": "https://aistudiocdn.com/phosphor-react@^1.4.1/",
     "vitest/": "https://aistudiocdn.com/vitest@^3.2.4/",
@@ -130,7 +126,8 @@
     "@testing-library/jest-dom/": "https://aistudiocdn.com/@testing-library/jest-dom@^6.9.1/",
     "@testing-library/react": "https://aistudiocdn.com/@testing-library/react@^16.3.0",
     "@testing-library/dom": "https://aistudiocdn.com/@testing-library/dom@^10.4.1",
-    "vitest": "https://aistudiocdn.com/vitest@^3.2.4"
+    "vitest": "https://aistudiocdn.com/vitest@^3.2.4",
+    "vite": "https://aistudiocdn.com/vite@^7.1.9"
   }
 }
 </script>
