--- a/index.html
+++ b/index.html
@@ -116,18 +116,17 @@
   <script type="importmap">
 {
   "imports": {
-    "react": "https://aistudiocdn.com/react@^19.2.0",
-    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
-    "react/": "https://aistudiocdn.com/react@^19.2.0/",
-    "phosphor-react": "https://aistudiocdn.com/phosphor-react@^1.4.1",
-    "phosphor-react/": "https://aistudiocdn.com/phosphor-react@^1.4.1/",
-    "vitest/": "https://aistudiocdn.com/vitest@^3.2.4/",
-    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.0.4",
-    "@testing-library/jest-dom/": "https://aistudiocdn.com/@testing-library/jest-dom@^6.9.1/",
-    "@testing-library/react": "https://aistudiocdn.com/@testing-library/react@^16.3.0",
-    "@testing-library/dom": "https://aistudiocdn.com/@testing-library/dom@^10.4.1",
-    "vitest": "https://aistudiocdn.com/vitest@^3.2.4",
-    "vite": "https://aistudiocdn.com/vite@^7.1.9"
+    "react": "https://aistudiocdn.com/react@18.2.0",
+    "react-dom/": "https://aistudiocdn.com/react-dom@18.2.0/",
+    "react/": "https://aistudiocdn.com/react@18.2.0/",
+    "phosphor-react": "https://aistudiocdn.com/phosphor-react@1.4.1",
+    "phosphor-react/": "https://aistudiocdn.com/phosphor-react@1.4.1/",
+    "@vercel/analytics/": "https://aistudiocdn.com/@vercel/analytics@1.3.1/",
+    "react-router-dom": "https://aistudiocdn.com/react-router-dom@6.24.1",
+    "vite": "https://aistudiocdn.com/vite@^7.2.2",
+    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.0",
+    "url": "https://aistudiocdn.com/url@^0.11.4",
+    "@clerk/clerk-react": "https://aistudiocdn.com/@clerk/clerk-react@^5.53.8"
   }
 }
 </script>
