--- a/index.html
+++ b/index.html
@@ -112,6 +112,34 @@
       input.peer:-webkit-autofill + label {
         transform: translateY(-1.5rem) scale(0.75);
       }
+
+      /* Custom Scrollbar Styles for a cohesive dark theme */
+      /* For Webkit-based browsers (Chrome, Safari, Edge) */
+      ::-webkit-scrollbar {
+        width: 8px;
+        height: 8px;
+      }
+
+      ::-webkit-scrollbar-track {
+        background: #27272a; /* Tailwind zinc-800 */
+        border-radius: 10px;
+      }
+
+      ::-webkit-scrollbar-thumb {
+        background: #52525b; /* Tailwind zinc-600 */
+        border-radius: 10px;
+        border: 2px solid #27272a; /* Creates padding around thumb */
+      }
+
+      ::-webkit-scrollbar-thumb:hover {
+        background: #71717a; /* Tailwind zinc-500 */
+      }
+
+      /* For Firefox */
+      * {
+        scrollbar-width: thin;
+        scrollbar-color: #52525b #27272a; /* thumb color track color */
+      }
     </style>
   <script type="importmap">
 {
